Criação de Projeto React, links e rotas, useEffect() 20/09

--- a/exfix-01.html
+++ b/exfix-01.html
@@ -19,7 +19,6 @@
       Usando os recursos do React (manupuladores de evento e useState),
       escreva o nome completo da pessoa (EM MAIÚSCULAS) toda vez que houver 
       alteração nos campos de nome ou sobrenome.
-
       1) Criar um useState para armazenar o nome completo.
       2) Criar uma função para manipular o evento onChange dos inputs. Nessa
          função, deve-se ler os valores de ambos os inputs (via getElementById ou
@@ -30,43 +29,31 @@
 
     const CustomForm = () => {
 
-    const [nome, setNome] = React.useState('')
-    const [sobrenome, setSobrenome] = React.useState('')
-    const [nomeCompleto, setNomeCompleto] = React.useState('')
+      const [nomeCompleto, setNomeCompleto] = React.useState('')
 
-    const handleChange = event => {
-        setNome(event.target.value)
-    }
-
-    const handleChange2 = event => {
-        setSobrenome(event.target.value)
-    }
-
-    const handleSubmit = event => {
-        alert(`Olá, ${nome}!`)
-        alert(`Olá, ${sobrenome}!`)
-        alert(`Olá, ${nomeCompleto}!`)
-    }
-    
-
+      const handleChange = event => {
+        // let nome = document.getElementById('nome').value
+        // let sobrenome = document.getElementById('sobrenome').value
+        let nome = document.querySelector('#nome').value
+        let sobrenome = document.querySelector('#sobrenome').value
+        setNomeCompleto((nome + ' ' + sobrenome).toUpperCase())
+      }
 
       return (
-        <form onSubmit={handleSubmit}>
-          { /* Em JSX, o atributo HTML "for" é escrito como "htmlFor" porque 
-                o primeiro termo é uma palavra reservada em JavaScript */ }
-          <label htmlFor="nome">Informe seu nome:</label><br />
-          <input id="nome" onChange={handleChange} /><br />
-
-          <label htmlFor="sobrenome">Informe seu sobrenome:</label><br />
-          <input id="sobrenome" onChange={handleChange2} /><br />
-
-          <label htmlFor="nomeCompleto">Nome Completo:</label>
-          <input id="nomeCompleto" value={String(nome).toUpperCase() + " " + String(sobrenome).toUpperCase()} readonly /><br />
-
+        <form>
+          <div>
+            <label htmlFor="nome">Nome</label>
+            <input id="nome" onChange={handleChange} />
+          </div>
+          <div>
+            <label htmlFor="sobrenome">Sobrenome</label>
+            <input id="sobrenome" onChange={handleChange} />
+          </div>
+          <div id="nomeCompleto">{nomeCompleto}</div>
         </form>
       )
-    }
     
+    }
 
     ReactDOM.render(<CustomForm />, document.getElementById('root'))
   
